--- a/html/notification.html
+++ b/html/notification.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="http://fonts.googleapis.com/earlyaccess/notosansjapanese.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-        <title>ホーム</title>
+        <title>通知</title>
     </head>
     <body>
         <header class="header">
@@ -16,10 +16,13 @@
                     <i class="fas fa-bell"></i>通知</a></li>
                 <li><a href="#" class="link--header">
                     <i class="fas fa-envelope"></i>メッセージ</a></li>
-                <form class="header__nav-search">
+                <li>
+                    <form class="header--nav-search">
                     <input type="text">
                     <a href="search.html" class="link--header"><i class="fas fa-search"></i>検索</a>
                 </form>
+                </li>
+                
             </ul>
             <div class="header__sub">
                 <a href="user.html" class="link--header"><i class="fas fa-smile"></i></a>
