--- a/html/search.html
+++ b/html/search.html
@@ -10,16 +10,19 @@
     <body>
         <header class="header">
             <ul class="header__nav">
-                <li><a href="home.html" class="link--header">
+                <li><a href="#" class="link--header">
                     <i class="fas fa-home"></i>ホーム</a></li>
                 <li><a href="notification.html" class="link--header">
                     <i class="fas fa-bell"></i>通知</a></li>
                 <li><a href="#" class="link--header">
                     <i class="fas fa-envelope"></i>メッセージ</a></li>
-                <form class="header__nav-search">
+                <li>
+                    <form class="header--nav-search">
                     <input type="text">
-                    <a href="#" class="link--header"><i class="fas fa-search"></i>検索</a>
+                    <a href="search.html" class="link--header"><i class="fas fa-search"></i>検索</a>
                 </form>
+                </li>
+                
             </ul>
             <div class="header__sub">
                 <a href="user.html" class="link--header"><i class="fas fa-smile"></i></a>
