create文、styleを微修正してコミットします。

--- a/html/user.html
+++ b/html/user.html
@@ -41,20 +41,20 @@
                 <li class="user-info">
 
                     <ul class="user-info__content">
-                        <a href="user.html"><li class="user-info__content__sub">投稿</li></a>
-                        <a href="user.html"><li class="user-info__content__main">19</li></a>
+                        <li class="user-info__content__sub"><a href="user.html">投稿</a></li>
+                        <li class="user-info__content__main"><a href="user.html">19</a></li>
                     </ul>
                     <ul class="user-info__content">
-                        <a href="following.html"><li class="user-info__content__sub">フォロー</li></a>
-                        <a href="following.html"><li class="user-info__content__main">13</li></a>
+                        <li class="user-info__content__sub">フォロー<a href="following.html"></a></li>
+                        <li class="user-info__content__main"><a href="following.html">13</a></li>
                     </ul>
                     <ul class="user-info__content">
-                        <a href="follower.html"><li class="user-info__content__sub">フォロワー</li></a>
-                        <a href="follower.html"><li class="user-info__content__main">14</li></a>
+                        <li class="user-info__content__sub"><a href="follower.html">フォロワー</a></li>
+                        <li class="user-info__content__main"><a href="follower.html">14</a></li>
                     </ul>
                     <ul class="user-info__content">
-                        <a href="favorite.html"><li class="user-info__content__sub">お気に入り</li></a>
-                        <a href="favorite.html"><li class="user-info__content__main">5</li></a>
+                        <li class="user-info__content__sub"><a href="favorite.html">お気に入り</a></li>
+                        <li class="user-info__content__main"><a href="favorite.html">5</a></li>
                     </ul>
                 </li>
                 
