サインアップ画面レスポンシブ対応

--- a/html/sigin-up.html
+++ b/html/sigin-up.html
@@ -11,7 +11,7 @@
         <header class="header">
 
             <div class="header__title">
-            <h2>Test</h2>
+            <h2>Twitter っぽいやつ</h2>
             </div>
             <div class="header__sub">
             <a href="login.html" class="button--nav">ログイン</a>
